quik fix z-index end modal not high enough to go on top of detail view

--- a/src/style/scss/_endmodal.scss
+++ b/src/style/scss/_endmodal.scss
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 500;
+    z-index: 5000;
 }
 
 .iapp-end-modal-bg {
